--- a/index.html
+++ b/index.html
@@ -398,15 +398,13 @@
         <div class="container">
             <div class="call-to-action">
 
-                <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
-                <h2>Accessible Anywhere</h2>
-                <p class="tagline">Available for all major mobile and desktop platforms. This app can be added to your homepage for even quicker accessibility. Coming in the future as an app for Google Play and Apple App Store.</p>
+                <div class="text-center mb-3"><img src="./images/desktop.png" class="img-fluid wow fadeInUp" style="max-height: 256px"></div>
+                <h2>Accessible Anywhere (including your desktop)</h2>
+                <p class="tagline">Available for all major mobile and desktop platforms. This app can also added to your homepage for even quicker accessibility (progressive web app). Coming soon to download on Google Play and Apple App Stores.</p>
                 <div class="my-4">
-
-                   
-                    <button class="btn btn-light bg-white"><img src="./images/apple.png" alt="icon" class="img-fluid" style="max-height: 120px"></button>
-                    <button class="btn btn-light bg-white"><img src="./images/play.png" alt="icon" class="img-fluid" style="max-height: 120px"></button>
-                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 120px;" ></button>
+                    <button class="btn btn-light bg-white"><img src="./images/apple.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
+                    <button class="btn btn-light bg-white"><img src="./images/play.png" alt="icon" class="img-fluid" style="max-height: 100px"></button>
+                     <button class="btn btn-light bg-white"><img src="./public/img/ReadMe/pwa.png" alt="icon" class="img-fluid" style="max-height: 100px;" ></button>
 
                 </div>
                 <p class="text-primary"><small><i>*Tested and working on all browsers including, Safari, Chrome, Firefox, and Edge. </i></small></p>
