--- a/gyms.html
+++ b/gyms.html
@@ -42,7 +42,7 @@
                                 <li class="nav-item"> <a class="nav-link" href="#features">FEATURES</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
-                                <li class="nav-item mb-2"><a href="./gyms.html" class="btn btn-outline-light ml-lg-3">FOR GYMS</a></li>
+                                <li class="nav-item mb-2"><a href="./index.html" class="btn btn-outline-light ml-lg-3">FOR CLIMBERS</a></li>
                                 <li class="nav-item"><a href="https://touchstone.betabouldersapp.com" class="btn btn-outline-light ml-lg-3">DEMO</a></li>
                             </ul>
                         </div>
@@ -58,89 +58,100 @@
 
     <div class="section-title p-3 mt-3">
         <div class="container">
-            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Get (beta) Sprayed. 💦</h2>
-            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">The app every rock climber needs. Get the solution (beta) to your bouldering routes and join a community along the way.</p>
+            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Connecting gyms with climbers</h2>
+            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">with easy to scan tags delivering beta videos and analyzable metrics.</p>
         </div>
      </div>
 
-    <div class="client-logos bg-white mb-3">
-        <div class="container text-center">
-            <img src="images/client-logos.png" alt="client logos" class="img-fluid">
-        </div>
-    </div>
-
-    <div class="section light-bg pt-3" id="features">
+    <div class="section light-bg pt-5" id="features">
         <div class="container">
+            <div class="section-title">
+                <small>FEATURES</small>
+                <h3>Organize & Add Value to your Membership</h3>
+            </div>
 
-            <div class="row">
-                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.5s" data-wow-delay="0.3s">
-                    <div class="card features">
-                        <div class="card-body">
-                            <div class="media">
-                                <span class="ti-download gradient-fill ti-3x mr-3"></span>
-                                <div class="media-body">
-                                    <h4 class="card-title">No Downloads</h4>
-                                    <p class="card-text">This is a web app accessible by anyone with internet. Access the main application and track your progress through multiple participating gyms.  <br/> main.betabouldersapp.com</p>
-                                </div>
-                            </div>
+            <ul class="nav nav-tabs nav-justified" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#communication">βTag™</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#schedule">QR Scanner & Ticks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#messages">Route Database</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#livechat">Gym Benefits</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="communication">
+                    <div class="d-flex flex-column flex-lg-row">
+                        <img src="images/betatag.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
+                        <div>
+                            <h2>The Power of the βTag™</h2>
+                            <p class="lead">Organization is the problem and our tags are the solution. </p>
+                            <p>Print βTags™ directly from a climb's page or order durable, reusable βTags™ that you can attach to routes. Along with key route information, tags are marked with handy indicators for color, danger, and what's considered on the route.
+                            </p>
+
+                            <p> Completely replacing your tags may be too cumbersome for some, so there's an option for a compact βTag™. The information on this tag can be customize to a gym's liking and can be printed with a label maker. We recommend using our portable label maker so labels can be made quickly and applied as stickers. This option is especially suited for member rock climbing competitions!
+                            </p>
+
+
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.5s" data-wow-delay="0.5s">
-                    <div class="card features">
-                        <div class="card-body">
-                            <div class="media">
-                                <span class="ti-face-smile gradient-fill ti-3x mr-3"></span>
-                                <div class="media-body">
-                                    <h4 class="card-title">Team Send!</h4>
-                                    <p class="card-text">Don't wait around for beta from someone else. See it straight from the mastermind who came up with it. Don't want video? Get annotated climbs for that crux you're stuck on instead! </p>
-                                </div>
-                            </div>
+                <div class="tab-pane fade" id="schedule">
+                    <div class="d-flex flex-column flex-md-row">
+                        <div>
+                            <h2>Scanning Initiated</h2>
+                            <p class="lead">Our system and app revolves around the idea of scanning to get things done. </p>
+                            <p> While the modern phone have built-in QR code scanner apps (iOS 11, Pixel 2, Samsung S8, etc.), we also have our own blazing fast continous QR scanner in Beta Boulders app. With our app's QR Scanner, climbers can scan routes they did to be ticked and saved to their accounts or use it to navigate directly to the climb's beta. Climbers can then check out their account's dashboard to see stats with charts and graphs and a searchable list of saved climbs!
+                            </p>
+                            <img src="./images/dashboardicon.png" style="width: 180px">
+                        </div>
+                        <img src="images/gallery/4.jpg" alt="graphic" class="img-fluid rounded align-self-start mr-lg-3 mb-5 mb-lg-0 col-md-4">
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="messages">
+                    <div class="d-flex flex-column flex-lg-row">
+                        <img src="images/database.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
+                        <div>
+                            <h2>Technology</h2>
+                            <p class="lead">Leveraging Cloud computing and storage for climbing </p>
+                            <p> Your climbers and setters can now refer back to past climbs any time because its in a database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and your profile as a portfolio to show off your best work too! What if you have no idea what route to make next? Browse past climbs and get fun ideas!
+                            </p>
+
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 animated wow flipInX" data-wow-duration="1.5s" data-wow-delay="0.7s">
-                    <div class="card features">
-                        <div class="card-body">
-                            <div class="media">
-                                <span class="ti-user gradient-fill ti-3x mr-3"></span>
-                                <div class="media-body">
-                                    <h4 class="card-title">1 App, All Climbing Gyms</h4>
-                                    <p class="card-text">Join the community along your friends or find new ones. Tick climbs you've done and track your progress with our visualization tools. Share your climbs, progress, and your beta with friends too! </p>
-                                </div>
-                            </div>
+                <div class="tab-pane fade" id="livechat">
+                    <div class="d-flex flex-column flex-lg-row">
+                        <div>
+
+                            <h2>Using Data to Your Advantage</h2>
+                            <p class="lead">The data we collect goes a long way towards building better climbs and making happier climbers.</p>
+                            <p>Every climb has a star rating system from 1-5 and are graded by the climbers. We also collect data on what routes are being scanned for beta and which are being ticked. Now you can see what climbers like, what grade and styles are in demand, how well the routesetters are setting, and what kinds of climbs to set next using this information.
+                            </p>
+                            <img src="images/dashboard.png" alt="graphic" class="img-fluid mt-2 mb-5">
+                            <h6>Route Management</h6>
+                            <p> Additionally, get the demographics of both your climbers and climbs. Organize your routes to see the distribution of grades and types. The browsable database of climbs can be used by your climbers so they see what's new before heading to the gym. All this so you can make better business decisions in the interest of your climbers.
+                            </p>
+                            <h6>Competitions</h6>
+                            <p> Do you do climbing competitions? If you do, you can ditch the scorecards and forget about gathering up volunteers to tally up points for a whole hour. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. They can see whos ahead before the competition is over and push themselves harder. Simply just create a new climb under competition mode!
+                            </p>
+                            <img src="./images/comp.png" style="width: 180px">
+                            
                         </div>
+                        
                     </div>
                 </div>
             </div>
 
+
         </div>
-
-
-
     </div>
     <!-- // end .section -->
-    <div class="section">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 offset-lg-6 animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
-                    <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
-                    <h2>It's Not Just a Concept Anymore.</h2>
-                    <p class="mb-4">Beta Boulders App is the first of its kind. There's no other application tailored made that allows climbers to quickly track progress and get beta for free. Use the app to check into your climbing gym and start tracking your climbs!</p>
-                    <a href="https://touchstone.betabouldersapp.com" class="btn btn-primary">Check it Out!</a>
-                </div>
-            </div>
-            <div class="perspective-phone">
-                <img src="images/perspective.png" alt="perspective phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
-            </div>
-        </div>
-
-    </div>
-    <!-- // end .section -->
-
-
-  
 
     <div class="section">
 
@@ -152,9 +163,9 @@
                 <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
-                        <h2>Beta Videos Directly in Your Hands</h2>
-                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution to a climb you're stuck on. Watch it conveniently and seamlessly by scanning the βTag™. </p>
-                    </div>
+                        <h2>Beta Videos to lessen climber frustrations</h2>
+                        <p class="mb-4">Do you want to lose the database and just use the core feature of providing beta videos? Check out βSpray™. It has the core feature of βouldersApp™ in providing videos through a reusable βTag™. Contact to ask for sample tags.</p>
+                        <a href="https://spray.betabouldersapp.com/"><img src="./images/spray.png" class="img-fluid" style="height:180px"></a></div>
                 </div>
             </div>
 
@@ -163,20 +174,57 @@
     </div>
     <!-- // end .section -->
 
+
+    <div class="section light-bg">
+
+        <div class="container">
+            <h3>Adding a Climb is Easy, Simple, and Quick.</h3>
+            <div class="row">
+                <div class="col-md-8 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
+                    <ul class="list-unstyled ui-steps">
+                        <li class="media">
+                            <div class="circle-icon mr-4">1</div>
+                            <div class="media-body">
+                                <h5>Log into your Gym Account</h5>
+                                <p>Navigate to your gym's profile page or manage tags tab.</p>
+                            </div>
+                        </li>
+                        <li class="media my-4">
+                            <div class="circle-icon mr-4">2</div>
+                            <div class="media-body">
+                                <h5>Add a Climb in under 15 seconds</h5>
+                                <p>Enter a new climb within seconds with a 3 step form that gathers an image and selects some basic info. Start by clicking the green plus icon. Print the tag or skip the printing process all together by using a reusable tag.</p>
+                            </div>
+                        </li>
+                        <li class="media">
+                            <div class="circle-icon mr-4">3</div>
+                            <div class="media-body">
+                                <h5>Add Beta Videos or Annotations</h5>
+                                <p>Record and share beta to help your climbers who are stuck. Too much? There's also the option to annotate a climb too. Give hints for your climb's cruxes using this tool to give hints at key areas.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <img src="images/iphonex2.png" alt="iphone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    <!-- // end .section -->
+
+
     <div class="section">
         <div class="container">
             <div class="section-title">
                 <small>TESTIMONIALS</small>
-                <h3>What Our Users Say</h3>
+                <h3>What Gyms Have to Say</h3>
             </div>
 
             <div class="testimonials owl-carousel">
-                <div class="testimonials-single">
-                    <img src="images/ryan.png" alt="client" class="client-img">
-                    <blockquote class="blockquote">HOLY SH**. I NEED THIS IN MY LIFE!!</blockquote>
-                    <h5 class="mt-4 mb-2">Ryan Hiroto</h5>
-                    <p class="text-primary">Climber, Touchstone Climbing</p>
-                </div>
                 <div class="testimonials-single">
                     <img src="images/matt.png" alt="client" class="client-img">
                     <blockquote class="blockquote">I will admit, this idea truly is awesome and impressive...Impressed with the idea, it is very cool and very futuristic. I can imagine a ton of work and love went into its development...</blockquote>
@@ -235,17 +283,10 @@
 
             <div class="row pt-4">
                 <div class="col-md-6">
-                    <h4 class="mb-3">Do I have to have an account to use this app?</h4>
-                    <p class="light-font mb-5">Nope! You can access the database, browse climbs, and see beta without an account. We envision this app to be used by both gym members and guests. However, you'll be missing out on a few key features like checking in with your phone and the ability to tick and bookmark climbs to track progress! </p>
-                    <h4 class="mb-3">Do I have to download anything?</h4>
-                    <p class="light-font mb-5">BetaBoulders App is originally an all web application. You can access it on your browser (phone or desktop) and use all the features. You can also choose to save it to your homepage as our app is a Progressive Web Application. By doing so, it will be treated and act like an app you downloaded. However, iOS and Android apps are coming soon!</p>
-
+                    <h4 class="mb-3">As a gym, what do I have to do to integrate this into our system?</h4>
+                    <p class="light-font mb-5">Absolutely nothing. Well sort of. Our app is a standalone web application. All that has to be done is to include your gym into our list of participating gyms. Once you have a gym account, you're ready to rock and roll! </p>
                 </div>
                 <div class="col-md-6">
-
-                    <h4 class="mb-3">Isn't this considered cheating? Doesn't this ruin the fun of climbing?</h4>
-                    <p class="light-font mb-5"> At the core, we want climbers to get better by seeing great technique straight from the route setter. We believe that it's good practice if you're able to mimic another person, especially on a route you couldn't otherwise have done on your own. As a climber, try to use it as your last resort or look at beta for a climb you otherwise didn't think you can do! </p>
-
                 </div>
             </div>
         </div>
