--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                                 <li class="nav-item mb-2"><a href="./gyms.html" class="btn btn-outline-light ml-lg-3">FOR GYMS</a></li>
-                                <li class="nav-item"><a href="https://touchstone.betabouldersapp.com" class="btn btn-outline-light ml-lg-3">DEMO</a></li>
+                                <li class="nav-item"><a href="https://touchstone.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">DEMO</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -59,7 +59,7 @@
     <div class="section-title p-3 mt-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Get (beta) Sprayed. 💦</h2>
-            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">The app every rock climber needs. Get the solution (beta) to your bouldering routes and join a community along the way.</p>
+            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">The app every rock climber needs. Get the solution (beta) to your bouldering routes, track progress, and join a community along the way.</p>
         </div>
      </div>
 
@@ -80,7 +80,7 @@
                                 <span class="ti-download gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">No Downloads</h4>
-                                    <p class="card-text">This is a web app accessible by anyone with internet. Access the main application and track your progress through multiple participating gyms.  <br/> main.betabouldersapp.com</p>
+                                    <p class="card-text">This is a web app accessible by anyone with internet. Access the main application and track your progress through multiple participating gyms.</p>
                                 </div>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                                 <span class="ti-face-smile gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">Team Send!</h4>
-                                    <p class="card-text">Don't wait around for beta from someone else. See it straight from the mastermind who came up with it. Don't want video? Get annotated climbs for that crux you're stuck on instead! </p>
+                                    <p class="card-text">Don't wait around for beta from someone else. See it straight from the routesetter by scanning the βTag™. Don't want video? Get annotated climbs for that crux you're stuck on instead! </p>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                                 <span class="ti-user gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">1 App, All Climbing Gyms</h4>
-                                    <p class="card-text">Join the community along your friends or find new ones. Tick climbs you've done and track your progress with our visualization tools. Share your climbs, progress, and your beta with friends too! </p>
+                                    <p class="card-text">Join the community! Tick climbs and track your progress with our visualization tools. Share your climbs, progress, and your beta with friends too! </p>
                                 </div>
                             </div>
                         </div>
@@ -126,8 +126,8 @@
             <div class="row">
                 <div class="col-lg-6 offset-lg-6 animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
-                    <h2>It's Not Just a Concept Anymore.</h2>
-                    <p class="mb-4">Beta Boulders App is the first of its kind. There's no other application tailored made that allows climbers to quickly track progress and get beta for free. Use the app to check into your climbing gym and start tracking your climbs!</p>
+                    <h2>The first of its kind.</h2>
+                    <p class="mb-4">There's no other application tailored made for climbers and developed and marketed by climbers that allows users to quickly track progress and get beta for free. Use βouldersapp™ to check into your climbing gym and start tracking your climbs!</p>
                     <a href="https://touchstone.betabouldersapp.com" class="btn btn-primary">Check it Out!</a>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h2>Beta Videos Directly in Your Hands</h2>
-                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution to a climb you're stuck on. Watch it conveniently and seamlessly by scanning the βTag™. </p>
+                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for a climb you're stuck on. Watch and see the beta it conveniently and seamlessly by scanning the βTag™ on the spot! </p>
                     </div>
                 </div>
             </div>
