--- a/gyms.html
+++ b/gyms.html
@@ -43,7 +43,7 @@
                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                                 <li class="nav-item mb-2"><a href="./index.html" class="btn btn-outline-light ml-lg-3">FOR CLIMBERS</a></li>
-                                <li class="nav-item"><a href="https://touchstone.betabouldersapp.com" class="btn btn-outline-light ml-lg-3">DEMO</a></li>
+                                <li class="nav-item"><a href="https://touchstone.betabouldersapp.com" class="btn btn-outline-light ml-lg-3 text-white" target="_blank">DEMO</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -53,13 +53,13 @@
     </div>
 
 <header class="bg-top" id="home" style="background:url(./images/top.png) no-repeat center center fixed; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
-        <div class="img-holder"><img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
+        <div class="img-holder"><img src="images/iphonex3.png" alt="phone" class="img-fluid animated fadeInUp wow" data-wow-duration="1s" data-wow-delay="0.1s"></div>
     </header>
 
     <div class="section-title p-3 mt-3">
         <div class="container">
-            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Connecting gyms with climbers</h2>
-            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">with easy to scan tags delivering beta videos and analyzable metrics.</p>
+            <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Connecting gyms with their climbers</h2>
+            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">with easy to scan tags delivering beta videos and <br/>analyzable performace metrics.</p>
         </div>
      </div>
 
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="section-title">
                 <small>FEATURES</small>
-                <h3>Organize & Add Value to your Membership</h3>
+                <h3>Adding Value to your Membership</h3>
             </div>
 
             <ul class="nav nav-tabs nav-justified" role="tablist">
@@ -89,24 +89,22 @@
                     <div class="d-flex flex-column flex-lg-row">
                         <img src="images/betatag.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
+                            <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
                             <h2>The Power of the βTag™</h2>
                             <p class="lead">Organization is the problem and our tags are the solution. </p>
-                            <p>Print βTags™ directly from a climb's page or order durable, reusable βTags™ that you can attach to routes. Along with key route information, tags are marked with handy indicators for color, danger, and what's considered on the route.
+                            <p>Print βTags™ directly from a climb's page or order dynamic, reusable βTags™ that you can attach to routes over and over. Along with key route information, βTags™ are marked with handy indicators for color, danger, and what's considered on the route.
                             </p>
-
-                            <p> Completely replacing your tags may be too cumbersome for some, so there's an option for a compact βTag™. The information on this tag can be customize to a gym's liking and can be printed with a label maker. We recommend using our portable label maker so labels can be made quickly and applied as stickers. This option is especially suited for member rock climbing competitions!
+                            <p> Gyms can also opt in for compact βTag™. The information on these tags can be customize to a gym's liking and can be printed with a label maker. This option is especially suited for member rock climbing competitions that require multiple tags at a moment's notice.
                             </p>
-
-
                         </div>
                     </div>
                 </div>
                 <div class="tab-pane fade" id="schedule">
                     <div class="d-flex flex-column flex-md-row">
                         <div>
-                            <h2>Scanning Initiated</h2>
-                            <p class="lead">Our system and app revolves around the idea of scanning to get things done. </p>
-                            <p> While the modern phone have built-in QR code scanner apps (iOS 11, Pixel 2, Samsung S8, etc.), we also have our own blazing fast continous QR scanner in Beta Boulders app. With our app's QR Scanner, climbers can scan routes they did to be ticked and saved to their accounts or use it to navigate directly to the climb's beta. Climbers can then check out their account's dashboard to see stats with charts and graphs and a searchable list of saved climbs!
+                            <h2>Scanning FTW</h2>
+                            <p class="lead">Our system and app revolves around the idea of scanning to quickly deliver the goods. </p>
+                            <p> While the modern phone have built-in QR code scanner apps (iOS 11, Pixel 2, Samsung S8, etc.), we built our own blazing fast continous QR scanner into βouldersapp™. With the βouldersapp™ QR Scanner, climbers can scan routes they did and save it to their accounts or use it to navigate directly to the climb's page where they can checkout the solution and beta.
                             </p>
                             <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
@@ -117,11 +115,11 @@
                     <div class="d-flex flex-column flex-lg-row">
                         <img src="images/database.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
+                            <div class="box-icon"><span class="ti-cloud-up gradient-fill ti-3x"></span></div>
                             <h2>Technology</h2>
                             <p class="lead">Leveraging Cloud computing and storage for climbing </p>
-                            <p> Your climbers and setters can now refer back to past climbs any time because its in a database. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? You can use our api as a reference and your profile as a portfolio to show off your best work too! What if you have no idea what route to make next? Browse past climbs and get fun ideas!
+                            <p> Your climbers and setters can now refer back to past climbs any time. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? Use your profile as a portfolio to show off your best works! What if you have no idea what route to make next? Browse past climbs and get fun ideas!
                             </p>
-
                         </div>
                     </div>
                 </div>
@@ -131,14 +129,16 @@
 
                             <h2>Using Data to Your Advantage</h2>
                             <p class="lead">The data we collect goes a long way towards building better climbs and making happier climbers.</p>
-                            <p>Every climb has a star rating system from 1-5 and are graded by the climbers. We also collect data on what routes are being scanned for beta and which are being ticked. Now you can see what climbers like, what grade and styles are in demand, how well the routesetters are setting, and what kinds of climbs to set next using this information.
+                            <p>Every climb has a star rating system from 1-5 and are graded by climbers. We also collect data on what routes are being scanned for beta and which are being ticked. Now you can see what climbers like, what grade and styles are in demand, how well the routesetters are setting, and what kinds of climbs to set next using this information.
                             </p>
                             <img src="images/dashboard.png" alt="graphic" class="img-fluid mt-2 mb-5">
                             <h6>Route Management</h6>
-                            <p> Additionally, get the demographics of both your climbers and climbs. Organize your routes to see the distribution of grades and types. The browsable database of climbs can be used by your climbers so they see what's new before heading to the gym. All this so you can make better business decisions in the interest of your climbers.
+                            <p> Additionally, get the demographics of both your climbers and climbs. Organize your routes to meet a distribution of grades and climbing styles. See what climbs, grades, and areas of the gym are the most popular and adjust the time when to switch out certain climbs based on their current use and popularity.</p>
+                            <p>The browsable database of climbs also be used by your climbers so they can see what's new and what to do before heading to the gym.</p>
+                            <p>All this so you can make better business decisions in the interest of your climbers.
                             </p>
                             <h6>Competitions</h6>
-                            <p> Do you do climbing competitions? If you do, you can ditch the scorecards and forget about gathering up volunteers to tally up points for a whole hour. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. They can see whos ahead before the competition is over and push themselves harder. Simply just create a new climb under competition mode!
+                            <p> Do you do climbing competitions? If you do, you can ditch the scorecards and forget about gathering up volunteers to tally up points. Climbers can use the tick feature of our app to tally points in realtime for maximum competitiveness. They can see who's ahead before the competition is over and push themselves harder. Simply just create a new climb under competition mode!
                             </p>
                             <img src="./images/comp.png" style="width: 180px">
                             
@@ -158,13 +158,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="images/dualphone.png" alt="dual phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
+                    <img src="images/comingout.png" alt="coming out photo" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
                 </div>
                 <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div>
-                        <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
-                        <h2>Beta Videos to lessen climber frustrations</h2>
-                        <p class="mb-4">Do you want to lose the database and just use the core feature of providing beta videos? Check out βSpray™. It has the core feature of βouldersApp™ in providing videos through a reusable βTag™. Contact to ask for sample tags.</p>
+                        <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
+                        <h2>Focused on Climbing</h2>
+                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving our community the means to complete a route and save it. Because βouldersapp™ is centered on the climb and not about offering frivolous badges and awards, it is insanely easy and intituitive to use.</p>
+                        <p>To demo, gyms can start off with just beta videos through βSpray™. Contact us for a free sample kit with reusuable tags.</p>
                         <a href="https://spray.betabouldersapp.com/"><img src="./images/spray.png" class="img-fluid" style="height:180px"></a></div>
                 </div>
             </div>
@@ -176,8 +177,9 @@
 
 
     <div class="section light-bg">
-
+        
         <div class="container">
+            <div class="box-icon"><span class="ti-time gradient-fill ti-3x"></span></div>
             <h3>Adding a Climb is Easy, Simple, and Quick.</h3>
             <div class="row">
                 <div class="col-md-8 d-flex align-items-center animated wow fadeInLeft" data-wow-duration="1.7s" data-wow-delay="0.3s">
@@ -193,14 +195,14 @@
                             <div class="circle-icon mr-4">2</div>
                             <div class="media-body">
                                 <h5>Add a Climb in under 15 seconds</h5>
-                                <p>Enter a new climb within seconds with a 3 step form that gathers an image and selects some basic info. Start by clicking the green plus icon. Print the tag or skip the printing process all together by using a reusable tag.</p>
+                                <p>Enter a new climb within seconds with a 3 step form that gathers an image and selects some basic info. Start by clicking the green plus icon. Print the formatted βTag™ or skip the printing process all together reassigning the new climb to a reusable βTag™.</p>
                             </div>
                         </li>
                         <li class="media">
                             <div class="circle-icon mr-4">3</div>
                             <div class="media-body">
                                 <h5>Add Beta Videos or Annotations</h5>
-                                <p>Record and share beta to help your climbers who are stuck. Too much? There's also the option to annotate a climb too. Give hints for your climb's cruxes using this tool to give hints at key areas.</p>
+                                <p>Record and share beta to help your climbers who are stuck or opt to annotate a climb as well. Give hints for your climb's cruxes using the annotation tool to give hints at key areas.</p>
                             </div>
                         </li>
                     </ul>
@@ -287,6 +289,8 @@
                     <p class="light-font mb-5">Absolutely nothing. Well sort of. Our app is a standalone web application. All that has to be done is to include your gym into our list of participating gyms. Once you have a gym account, you're ready to rock and roll! </p>
                 </div>
                 <div class="col-md-6">
+                    <h4 class="mb-3">Are there options for customization or for our own gym app?</h4>
+                    <p class="light-font mb-5">There is an option to spin a server up for your own gym to have it highly customizable. However that plan exists of our published priced plans, so contact us to see what can be done. </p>
                 </div>
             </div>
         </div>
