--- a/gyms.html
+++ b/gyms.html
@@ -68,6 +68,7 @@
             <div class="section-title">
                 <small>FEATURES</small>
                 <h3>Adding Value to your Membership</h3>
+                <h4>Gaining new members while retaining old.</h4>
             </div>
 
             <ul class="nav nav-tabs nav-justified" role="tablist">
@@ -90,11 +91,11 @@
                         <img src="images/betatag.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
-                            <h2>The Power of the βTag™</h2>
+                            <h3>Our <span style="font-weight: 800">βTags™</span></h3>
                             <p class="lead">Organization is the problem and our tags are the solution. </p>
-                            <p>Print βTags™ directly from a climb's page or order dynamic, reusable βTags™ that you can attach to routes over and over. Along with key route information, βTags™ are marked with handy indicators for color, danger, and what's considered on the route.
+                            <p>Print βTags™ directly from a climb's page or order dynamic, reusable βTags™ that you can attach to routes over and over to skip the process of reprinting. Along with key route information, βTags™ are marked with handy indicators for color, danger, and what's considered on the route.
                             </p>
-                            <p> Gyms can also opt in for compact βTag™. The information on these tags can be customize to a gym's liking and can be printed with a label maker. This option is especially suited for member rock climbing competitions that require multiple tags at a moment's notice.
+                            <p> Climbers can scan βTags™ to get beta, save and track progress, or to rate climbs.Gyms can also opt in for compact βTag™ that can be printed and added to existing tags. This option is especially suited for competitions that require multiple tags at a moment's notice.
                             </p>
                         </div>
                     </div>
@@ -102,9 +103,9 @@
                 <div class="tab-pane fade" id="schedule">
                     <div class="d-flex flex-column flex-md-row">
                         <div>
-                            <h2>Scanning FTW</h2>
+                            <h3>Scanning FTW</h3>
                             <p class="lead">Our system and app revolves around the idea of scanning to quickly deliver the goods. </p>
-                            <p> While the modern phone have built-in QR code scanner apps (iOS 11, Pixel 2, Samsung S8, etc.), we built our own blazing fast continous QR scanner into βouldersapp™. With the βouldersapp™ QR Scanner, climbers can scan routes they did and save it to their accounts or use it to navigate directly to the climb's page where they can checkout the solution and beta.
+                            <p> While the modern phone have built-in QR code scanners (iOS 11, Pixel 2, Samsung S8, etc.), we built our own blazing fast continous QR scanner into βouldersapp™. With the βouldersapp™ QR Scanner, climbers can scan routes they did and save it to their accounts or use it to navigate directly to the climb's page where they can checkout the solution and beta.
                             </p>
                             <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
@@ -116,9 +117,9 @@
                         <img src="images/database.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
                             <div class="box-icon"><span class="ti-cloud-up gradient-fill ti-3x"></span></div>
-                            <h2>Technology</h2>
+                            <h3>Technology</h3>
                             <p class="lead">Leveraging Cloud computing and storage for climbing </p>
-                            <p> Your climbers and setters can now refer back to past climbs any time. Want to remember that gnarly V8 you did months ago? Now you can as a climber. What if you're a routesetter looking to set at a new place? Use your profile as a portfolio to show off your best works! What if you have no idea what route to make next? Browse past climbs and get fun ideas!
+                            <p> With a database of climbs, your climbers and setters can refer back to past climbs at any time. Want to remember that gnarly V8 they did months ago? Now they can as a climber. What if there's a routesetter looking to set at a new place? Their profile can be used as a portfolio to show off their best works! What if your route setters have no idea what route to make next? They can browse past climbs as reference and get fun ideas!
                             </p>
                         </div>
                     </div>
@@ -127,7 +128,7 @@
                     <div class="d-flex flex-column flex-lg-row">
                         <div>
 
-                            <h2>Using Data to Your Advantage</h2>
+                            <h3>Using Data to Your Advantage</h3>
                             <p class="lead">The data we collect goes a long way towards building better climbs and making happier climbers.</p>
                             <p>Every climb has a star rating system from 1-5 and are graded by climbers. We also collect data on what routes are being scanned for beta and which are being ticked. Now you can see what climbers like, what grade and styles are in demand, how well the routesetters are setting, and what kinds of climbs to set next using this information.
                             </p>
@@ -286,11 +287,11 @@
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">As a gym, what do I have to do to integrate this into our system?</h4>
-                    <p class="light-font mb-5">Absolutely nothing. Well sort of. Our app is a standalone web application. All that has to be done is to include your gym into our list of participating gyms. Once you have a gym account, you're ready to rock and roll! </p>
+                    <p class="light-font mb-5">Our app is a standalone web application. All that has to be done is to include your gym into our list of participating gyms. Once you have a gym account, you're good to go! </p>
                 </div>
                 <div class="col-md-6">
-                    <h4 class="mb-3">Are there options for customization or for our own gym app?</h4>
-                    <p class="light-font mb-5">There is an option to spin a server up for your own gym to have it highly customizable. However that plan exists of our published priced plans, so contact us to see what can be done. </p>
+                    <h4 class="mb-3">Are there options for customization or have our own gym app?</h4>
+                    <p class="light-font mb-5">We can spin a server up for your own gym to have it highly customizable. However, that plan exists of our offered priced plans, so contact us to see what can be done. </p>
                 </div>
             </div>
         </div>
