--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="section-title p-3 mt-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Get (beta) Sprayed. 💦</h2>
-            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">The app every rock climber needs. Get the solution (beta) to your bouldering routes, track progress, and join a community along the way.</p>
+            <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s"><span style="font-weight: 800">βoulders</span><span style="font-size: 16px;font-weight: 800">app™</span> is the app rock climbers wished for. Get the solution (beta) to your bouldering routes, track progress, and join the community!</p>
         </div>
      </div>
 
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <div class="section light-bg pt-3" id="features">
+    <div class="section light-bg" id="features">
         <div class="container">
 
             <div class="row">
@@ -139,21 +139,18 @@
     </div>
     <!-- // end .section -->
 
-
-  
-
     <div class="section">
 
-        <div class="container">
+        <div class="container" >
             <div class="row">
                 <div class="col-md-6">
-                    <img src="images/dualphone.png" alt="dual phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
+                    <img src="images/dualphone1.png" alt="dual phone" class="img-fluid animated wow fadeIn" data-wow-duration="2.0s" data-wow-delay="0.4s">
                 </div>
                 <div class="col-md-6 d-flex align-items-center animated wow fadeInRight" data-wow-duration="1.7s" data-wow-delay="0.3s">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
-                        <h2>Beta Videos Directly in Your Hands</h2>
-                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for a climb you're stuck on. Watch and see the beta it conveniently and seamlessly by scanning the βTag™ on the spot! </p>
+                        <h2>Scan the <span style="font-weight: 700">βTag™</span> and get Beta Videos Directly in Your Hands</h2>
+                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for a climb you're stuck on. Watch and see the beta conveniently and seamlessly by scanning the βTag™ on the spot! </p>
                     </div>
                 </div>
             </div>
